--- a/css/style.css
+++ b/css/style.css
@@ -9,7 +9,7 @@ body {
 }
 
 .c_grey {
-    color: grey;
+    color: #B1B1B1;
 }
 
 /* Sfondo */
@@ -143,6 +143,7 @@ i:hover {
     align-items: center;
     height: 70px;
     width: 100%;
+    cursor: pointer;
     border-top: 1px solid rgb(230, 229, 229);
     border-bottom: 1px solid rgb(238, 233, 233);
 }
@@ -211,7 +212,29 @@ i:hover {
 
 /* Section - bottom - invio messaggi */
 #container-input-mess{
+    display: flex;
+    justify-content: space-around;
     width: 100%;
     height: 70px;
+    padding: 10px 5px;
+    line-height: 50px;
     background-color: #F3EEEA;
+}
+
+.smile,
+.microfono {
+    width: 10%;
+    height: 100%;
+    vertical-align: middle;
+    text-align: center;
+    font-size: 25px;
+    cursor: pointer;
+}
+
+#messaggi{
+    width: 80%;
+    height: 100%;
+    border: none;
+    padding-left: 10px;
+    border-radius: 5px;
 }
