--- a/css/style.css
+++ b/css/style.css
@@ -11,6 +11,12 @@ body {
 .c_grey {
     color: #B1B1B1;
 }
+.bg_green {
+    background-color: #D5F9BA;
+}
+.bg_white {
+    background-color: white;
+}
 
 /* Sfondo */
 .wrapper {
@@ -56,7 +62,7 @@ body {
 }
 .my_img > span {
     margin-left: 5px;
-    font-weight: bold;
+    font-weight: 600;
 }
 .icons {
     padding-right: 10px;
@@ -192,7 +198,7 @@ i:hover {
     height: 100%;
 }
 .avatar > img {
-    width: 15%;
+    width: 13%;
     border-radius: 50%;
     vertical-align: middle;
     margin-left: 10px;
@@ -204,11 +210,45 @@ i:hover {
 
 /* Section - Corpo dei messaggi */
 #container-messaggi{
+    display: flex;
+    flex-direction: column;
     width: 100%;
     height: calc(100% - 140px);
     overflow-y: auto;
+    padding: 20px 30px 0 30px;
     background-image: url("../img/mine.jpg");
 }
+
+.messaggio{
+    display: inline-block;
+    width: 50%;
+    /* height: 60px; da modificare  */
+    margin: 5px 0;
+    padding: 10px;
+    border-radius: 10px;
+}
+
+.inviato {
+    align-self: flex-end; 
+}
+
+h6 {
+    text-align: right;
+    font-weight: 500;
+}
+
+/* .messaggio > span {
+    font-size: 12px;
+    text-align: end;
+}
+ */
+h6::after {
+    content: "\2713";
+    margin-left: 5px;
+    color: rgb(15, 114, 180);
+}
+
+
 
 /* Section - bottom - invio messaggi */
 #container-input-mess{
