--- a/css/style.css
+++ b/css/style.css
@@ -158,13 +158,13 @@ i:hover {
 /* Lista chat */
 #contatti {
     height: calc(100% - 205px);
-    /* background-color: tomato; */
     overflow-y: auto;
 }
 
 .chat {
     display: flex;
     align-items: center;
+    position: relative;
     height: 70px;
     width: 100%;
     cursor: pointer;
@@ -178,13 +178,16 @@ i:hover {
     border-radius: 50%;
 }
 
+.chat:hover {
+    background-color: #E9EBEB;
+}
+
 .active {
     background-color: #E9EBEB;
 }
 
 .user {
     margin-left: 10px;
-    padding-right: 55px;
 }
 
 .user > p {
@@ -196,9 +199,11 @@ i:hover {
 }
 
 .chat > p {
+    position: absolute;
+    right: 5px;
+    top: 15px;
     font-weight: 300;
     font-size: 10px;
-    padding-left: 60px;
 }
 
 
@@ -289,5 +294,5 @@ h6::after {
     height: 100%;
     border: none;
     padding-left: 10px;
-    border-radius: 5px;
+    border-radius: 50px;
 }
