--- a/css/style.css
+++ b/css/style.css
@@ -244,7 +244,7 @@ i:hover {
 
 .messaggio{
     display: inline-block;
-    width: 50%;
+    width: 60%;
     /* height: 60px; da modificare  */
     margin: 5px 0;
     padding: 10px;
@@ -256,6 +256,7 @@ i:hover {
 }
 
 h6 {
+    margin-top: 5px;
     text-align: right;
     font-weight: 500;
 }
