--- a/css/style.css
+++ b/css/style.css
@@ -174,6 +174,10 @@ i:hover {
     border-bottom: 1px solid rgb(238, 233, 233);
 }
 
+.chat-light {
+    background-color: white;
+}
+
 .chat > img {
     width: 14%;
     margin-left: 20px;
@@ -243,21 +247,36 @@ i:hover {
     padding: 20px 30px 0 30px;
 }
 
-.dark-box {
-    background-image: url("../img/darck.jpg");
-}
-
 .chat-box {
     background-image: url("../img/mine.jpg");
 }
 
 .messaggio{
     display: inline-block;
+    position: relative;
     /* width: 60%; */
     /* height: 60px; da modificare  */
     margin: 5px 0;
     padding: 10px;
     border-radius: 10px;
+}
+
+.messaggio > i {
+    position: absolute;
+    top: 10px;
+    right: 5px;
+    color: gray;
+    visibility: hidden;
+    /* transition: all 1s; */
+}
+
+.messaggio:hover i{
+    /* right: 5px; */
+    visibility: visible;
+}
+
+.messaggio > p {
+    margin-right: 25px;
 }
 
 .inviato {
@@ -309,7 +328,7 @@ h6::after {
     padding-left: 10px;
     border-radius: 50px;
 }
-
+/* Css per cambiare il tema del colore di sfondo */
 .light {
     background: #eee;
 }
@@ -317,4 +336,8 @@ h6::after {
 .dark {
     background: rgb(70, 69, 69);
     color: white;
+}
+
+.dark-box {
+    background-image: url("../img/darck.jpg");
 }
