--- a/css/style.css
+++ b/css/style.css
@@ -245,6 +245,7 @@ i:hover {
     height: calc(100% - 140px);
     overflow-y: auto;
     padding: 20px 30px 0 30px;
+    position: relative;
 }
 
 .chat-box {
@@ -294,6 +295,29 @@ i:hover {
 
 /* /Menù a tendina sul messaggio */
 
+/* Tentativo di mostrare l'info dei messaggi */
+.prova {
+    width: 50%;
+    height: 50px;
+    position: absolute;
+    z-index: 2;
+    bottom: 0;
+    background-color: #E9EBEB;
+}
+
+.prova > p {
+    font-size: 13px;
+}
+
+.prova > i {
+    position: absolute;
+    right: 5px;
+}
+.prova > i:hover {
+    cursor: pointer;
+}
+/* /Tentativo di mostrare l'info dei messaggi */
+
 .messaggio > p {
     margin-right: 25px;
 }
@@ -301,6 +325,10 @@ i:hover {
 .inviato {
     align-self: flex-end; 
 }
+.ricevuto {
+    align-self: flex-start; 
+}
+
 
 h6 {
     margin-top: 5px;
