--- a/css/style.css
+++ b/css/style.css
@@ -97,7 +97,7 @@ i:hover {
     color: #8b8a8a;
 }
 /* Section - left - notifiche */
-.notifiche {
+.notice {
     display: flex;
     align-items: center;
     height: 85px;
@@ -108,7 +108,7 @@ i:hover {
     background-color: #8EDAFC;
 }
 
-.notifiche > i {
+.notice > i {
     font-size: 22px;
     background-color: white;
     border-radius: 50%;
@@ -116,16 +116,16 @@ i:hover {
     padding: 12px 10px;
 }
 
-.text-notifiche {
+.text-notice {
     margin-left: 10px;
 }
 
-.text-notifiche > p {
+.text-notice > p {
     font-size: 15px;
     font-weight: 500;
 }
 
-.text-notifiche > span {
+.text-notice > span {
     font-size: 13px;
     text-decoration: underline;
 }
@@ -158,7 +158,7 @@ i:hover {
 }
 
 /* Lista chat */
-#contatti {
+#contacts {
     height: calc(100% - 205px);
     overflow-y: auto;
 }
@@ -238,7 +238,7 @@ i:hover {
 }
 
 /* Section - Corpo dei messaggi */
-#container-messaggi{
+#container-messages{
     display: flex;
     flex-direction: column;
     width: 100%;
@@ -252,7 +252,7 @@ i:hover {
     background-image: url("../img/mine.jpg");
 }
 
-.messaggio{
+.message{
     display: inline-block;
     position: relative;
     /* width: 60%; */
@@ -262,7 +262,7 @@ i:hover {
     border-radius: 10px;
 }
 
-.messaggio > i {
+.message > i {
     position: absolute;
     top: 10px;
     right: 5px;
@@ -271,12 +271,12 @@ i:hover {
     /* transition: all 1s; */
 }
 
-.messaggio:hover i{
+.message:hover i{
     visibility: visible;
 }
 
 /* Menù a tendina sul messaggio */
-.contenitore-list {
+.container-list {
     position: absolute;
     right: 0;
     width: 180px;
@@ -288,7 +288,7 @@ i:hover {
     z-index: 2;
 }
 
-.contenitore-list p {
+.container-list p {
     padding: 10px;
 }
 
@@ -296,7 +296,7 @@ i:hover {
 /* /Menù a tendina sul messaggio */
 
 /* Tentativo di mostrare l'info dei messaggi */
-.prova {
+.info-message {
     width: 50%;
     height: 50px;
     position: absolute;
@@ -305,27 +305,27 @@ i:hover {
     background-color: #E9EBEB;
 }
 
-.prova > p {
+.info-message > p {
     font-size: 13px;
 }
 
-.prova > i {
+.info-message > i {
     position: absolute;
     right: 5px;
 }
-.prova > i:hover {
+.info-message > i:hover {
     cursor: pointer;
 }
 /* /Tentativo di mostrare l'info dei messaggi */
 
-.messaggio > p {
+.message > p {
     margin-right: 25px;
 }
 
-.inviato {
+.sent {
     align-self: flex-end; 
 }
-.ricevuto {
+.received {
     align-self: flex-start; 
 }
 
@@ -359,7 +359,7 @@ h6::after {
 }
 
 .smile,
-.microfono {
+.microphone {
     width: 10%;
     height: 100%;
     vertical-align: middle;
@@ -368,7 +368,7 @@ h6::after {
     cursor: pointer;
 }
 
-#messaggi{
+#messages{
     width: 80%;
     height: 100%;
     border: none;
